# VolumeKnob

VolumeKnob/: CMakeLists.txt
VolumeKnob/resource/: editor.uidesc
VolumeKnob/source/: cids.h  controller.cpp  controller.h  entry.cpp  processor.cpp  processor.h  version.h
